# hdrcopier

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md
hdrcopier-cli/: Cargo.toml
hdrcopier-cli/src/: main.rs
hdrcopier-core/: Cargo.toml
hdrcopier-core/src/: error.rs  lib.rs  metadata.rs  parse.rs  tools.rs  values.rs
src/: main.rs  metadata.rs  parse.rs  values.rs
