[package]
name = "hdrcopier-cli"
version = "0.3.2"
edition = "2021"
rust-version = "1.56"
authors = ["Joshua Holmer <jholmer.in@gmail.com>"]
description = "A tool for copying colorspace and HDR metadata from one file to another"
repository = "https://github.com/shssoichiro/hdrcopier"
license = "MIT"
keywords = ["video", "multimedia"]

[[bin]]
name = "hdrcopier"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdrcopier-core = { path = "../hdrcopier-core" }
clap = "3.0.13"

[features]
save = ["hdrcopier-core/save"]
