[package]
name = "hdrcopier-cli"
version = "0.5.2"
edition = "2024"
rust-version = "1.85"
authors = ["Joshua Holmer <jholmer.in@gmail.com>"]
description = "A tool for copying colorspace and HDR metadata from one file to another"
repository = "https://github.com/shssoichiro/hdrcopier"
license = "MIT"
keywords = ["video", "multimedia"]

[[bin]]
name = "hdrcopier"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = "4.4.8"
hdrcopier-core = { version = "0.5.1", path = "../hdrcopier-core" }
